--- a/WIREFRAMES/events.html
+++ b/WIREFRAMES/events.html
@@ -4,6 +4,8 @@
 <head>
   <title>Events | Sweet House Studio </title>
   <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <script src="../scripts/site.js" defer></script>
   <link rel="stylesheet" type="text/css" href="../styles/site.css">
 </head>
 
@@ -38,10 +40,15 @@
             <li>The State Hotel</li>
           </ul>
           <p>
-            Pricing is based on the number of guests, the subject of the photos, and the duration of the event. Because
-            these factors vary greatly depending on the type of event, we recommend <a href="contact.html">booking a
-              consultation appointment</a> for an accurate estimate of costs.
+            Pricing is based on the number of guests, the subject of the photos, and the duration of the event.
+            Because these factors vary greatly depending on the type of event, we recommend booking a consultation
+            appointment for an accurate estimate of costs.
           </p>
+
+          <p>
+            <a class="button" href="contact.html">Book a consultation</a>
+          </p>
+
           <h2 class="package_name">
             A typical small event package resembles the First Bank Holiday Party:
           </h2>
@@ -74,7 +81,7 @@
 
           <p class="quicklink"><a href="faq.html">Not sure what a "shot list" is or what "key guests" means? Check out
               our FAQ page!</a></p>
-          <section>
+          <section class="gallery-masonry">
             <figure class="service_example">
               <img alt="Networking Event" src="../images/business_dinner.jpg" />
               <figcaption>Car Show</figcaption>
@@ -88,7 +95,7 @@
               <figcaption>Traditional Chinese Show</figcaption>
             </figure>
             <figure class="service_example">
-              <img alt="People gathered in town" src="../images/flower.jpg" />
+              <img alt="People gathered in town" src="../images/gala.jpg" />
               <figcaption>Flower Show</figcaption>
             </figure>
             <figure class="service_example">
