--- a/WIREFRAMES/services.html
+++ b/WIREFRAMES/services.html
@@ -4,6 +4,8 @@
 <head>
   <title>Services | Sweet House Studio </title>
   <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <script src="../scripts/site.js" defer></script>
   <link rel="stylesheet" type="text/css" href="../styles/site.css">
 </head>
 
@@ -39,7 +41,7 @@
             </ul>
             <p>
               We've become quite renowned for our event photography, so much so that we needed to develop separate <a
-                href="events.html">event</a> and <a href="Travelings.html">traveling</a> packages. Session costs start at
+                href="events.html">event</a> and <a href="travelings.html">traveling</a> packages. Session costs start at
               $400, depending on the number of shots, overall session duration, and the number of subjects.
             </p>
             <p>
@@ -50,7 +52,7 @@
               If the location is greater than 20 miles' distance from the studio, there is an additional cost for
               travel.
             </p>
-            <p><a href="Travelings.html">Looking to learn more about travelings?</a></p>
+            <p><a href="travelings.html">Looking to learn more about travelings?</a></p>
             <p><a href="events.html">Looking to learn more about other events?</a></p>
           </section>
           <h2>On-Location Sessions Include:</h2>
