--- a/WIREFRAMES/Travelings.html
+++ b/WIREFRAMES/Travelings.html
@@ -4,6 +4,8 @@
 <head>
   <title>Weddings | Sweet House Studio </title>
   <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <script src="../scripts/site.js" defer></script>
   <link rel="stylesheet" type="text/css" href="../styles/site.css">
 </head>
 
