--- a/WIREFRAMES/about.html
+++ b/WIREFRAMES/about.html
@@ -2,8 +2,11 @@
 <html lang="en">
 
 <head>
-  <title>About | Sweet House Studio </title>
   <meta charset="utf-8" />
+  <title>About | Sweet House Studio </title>
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  
+  <script src="../scripts/site.js" defer></script>
   <link rel="stylesheet" type="text/css" href="../styles/site.css">
 </head>
 
