--- a/Travelings.html
+++ b/Travelings.html
@@ -4,6 +4,8 @@
 <head>
   <title>Weddings | Sweet House Studio </title>
   <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <script src="../scripts/site.js" defer></script>
   <link rel="stylesheet" type="text/css" href="../styles/site.css">
 </head>
 
@@ -67,7 +69,7 @@
               href="contact.html">request a consultation</a>.
           </p>
           <p class="quicklink"><a href="faq.html">Not sure what a "shot list" is? Check out our FAQ page!</a></p>
-          <section>
+          <section class="gallery-grid">
             <figure class="service_example">
               <img alt="Groom kissing bride's hand" src="../images/couple-woods.jpg" />
               <figcaption>New York City</figcaption>
