--- a/about.html
+++ b/about.html
@@ -2,8 +2,11 @@
 <html lang="en">
 
 <head>
-  <title>About | Sweet House Studio </title>
   <meta charset="utf-8" />
+  <title>About | Sweet House Studio </title>
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  
+  <script src="../scripts/site.js" defer></script>
   <link rel="stylesheet" type="text/css" href="../styles/site.css">
 </head>
 
@@ -26,25 +29,33 @@
         <article>
           <h1>About Us</h1>
           <figure>
-            <img alt="Photography Studio" src="../images/studio.jpg" />
-            <figcaption>Sweet House Studio in 2022</figcaption>
+            <img alt="Photography Studio" src="../images/studio.jpg" loading="lazy" decoding="async" />
+            <figcaption>Sweet House Studio</figcaption>
           </figure>
           <p>
             Sweet House Studio was founded in 2025 as a private, one-woman business built on a dream to capture the sweetest
             moments of life.
           </p>
           <figure>
-            <img alt="Sarah Kim" src="../images/woman.jpg" />
+            <img alt="Founder portrait" src="../images/woman.jpg" loading="lazy" decoding="async" />
             <figcaption>Fiona Chou, Founder</figcaption>
           </figure>
-          <p>
-            Founder Fiona Chou has been passionate about photography since 2016 and began her professional journey in 2025. 
-            After moving to Metuchen, NJ in 2024, Fiona laid the foundation for Sweet House Studio with the hope of turning 
-            fleeting moments into lasting memories.
+          <ul>
+            <li>Style: clean, true-to-life color and soft, flattering light</li>
+            <li>Experience: gentle posing guidance + candid moments</li>
+            <li>Delivery: a curated, edited gallery ready to share and print</li>
+          </ul>
 
-            Although still in the early stages of building the business, Sweet House Studio is rooted in the belief that 
-            every smile, every hug, every connection deserves to be treasured.
-          </p>
+           <h2>How it works</h2>
+           <ul>
+              <li>Consult: goals, location, timing, and a simple shot list</li>
+              <li>Session: guided portraits + natural storytelling coverage</li>
+              <li>Delivery: edited gallery within the agreed timeline</li>
+            </ul>
+
+            <p>
+              <a class="button" href="contact.html">Start with a free consult</a>
+            </p>
         </article>
       </main>
     </div>
