--- a/contact.html
+++ b/contact.html
@@ -4,6 +4,8 @@
 <head>
   <title>Contact | Sweet House Studio </title>
   <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <script src="../scripts/site.js" defer></script>
   <link rel="stylesheet" type="text/css" href="../styles/site.css">
 </head>
 
@@ -25,6 +27,14 @@
       <main>
         <article>
           <h1>Contact Us</h1>
+          <p>
+            Tell us what you’re planning and when. We’ll recommend coverage and send a clear quote.
+          </p>
+
+          <p>
+            <a class="button" href="contact.html">Book a consultation</a>
+          </p>
+
           <section>
             <h2>Hours of Operation</h2>
             <p>
