--- a/events.html
+++ b/events.html
@@ -4,13 +4,15 @@
 <head>
   <title>Events | Sweet House Studio </title>
   <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <script src="../scripts/site.js" defer></script>
   <link rel="stylesheet" type="text/css" href="../styles/site.css">
 </head>
 
 <body>
   <nav>
     <ul>
-      <li><a href="index.html"><img alt="Sweet House Studio Logo" src="../images/logo.png" /></a></li>
+      <li><a href="index.html"><img alt="Sweet House Studio Logo" src="../images/logo.png" loading="lazy" decoding="async"/></a></li>
       <li><a href="index.html">Home</a></li>
       <li><a href="services.html">Services</a></li>
       <li><a href="featured.html">Featured</a></li>
@@ -24,79 +26,59 @@
       <main>
         <article>
           <h1>Events</h1>
-
           <p>
-            We specialize in photographing a wide variety of events — from intimate gatherings to large-scale public shows. Whether it's a cultural festival, a corporate function, or a private celebration, our team captures every meaningful moment with creativity and precision.
-          
-            <br />
-            Venues we have experience working with include:
-          </p>
-          <ul>
-            <li>Traditional Chinese Show</li>
-            <li>Coffee Shop</li>
-            <li>NJ Barn</li>
-            <li>The State Hotel</li>
-          </ul>
-          <p>
-            Pricing is based on the number of guests, the subject of the photos, and the duration of the event. Because
-            these factors vary greatly depending on the type of event, we recommend <a href="contact.html">booking a
-              consultation appointment</a> for an accurate estimate of costs.
-          </p>
-          <h2 class="package_name">
-            A typical small event package resembles the First Bank Holiday Party:
-          </h2>
-          <ul>
-            <li>A guest list of less than 100</li>
-            <li>A four-hour long ceremony and reception</li>
-            <li>Custom "shot list" of 25+ edited proofs</li>
-            <li>Your choice of 15+ edited proofs</li>
-            <li>50+ shots covering the event and guests</li>
-          </ul>
-          <p>
-            This package typically begins at $900 but will vary depending on the number of locations, travel, the types
-            of poses, etc. A more accurate estimate is available with a consultation.
-          </p>
-          <h2 class="package_name">
-            A typical large event package resembles the 50th Annual Art Creation Convention:
-          </h2>
-          <ul>
-            <li>Over 500 attendees</li>
-            <li>A five-hour long event</li>
-            <li>Custom "shot list" of 15+ edited proofs</li>
-            <li>35+ shots of maximum 35 key guests during the event</li>
-            <li>Your choice of 15+ edited proofs</li>
-            <li>150+ shots covering the event and guests</li>
-          </ul>
-          <p>
-            This package typically begins at $2,400 but will vary depending on the number of locations, travel, the
-            types of poses, etc. A more accurate estimate is available with a consultation.
+            Event coverage that feels natural and unobtrusive—so you can stay present while we document the story.
           </p>
 
-          <p class="quicklink"><a href="faq.html">Not sure what a "shot list" is or what "key guests" means? Check out
-              our FAQ page!</a></p>
-          <section>
+          <ul>
+            <li>Performances & cultural shows</li>
+            <li>Birthday celebrations & private parties</li>
+            <li>Community, brand, and corporate events</li>
+          </ul>
+
+          <p>
+            Quotes are based on coverage time, guest count, and deliverables.
+          </p>
+
+          <p>
+            <a class="button" href="contact.html">Book a consultation</a>
+          </p>
+
+          <h2 class="package_name">Popular package example</h2>
+          <ul>
+            <li>Multi-hour coverage (based on your timeline)</li>
+            <li>Shot list + key guest/VIP moments</li>
+            <li>Curated edited gallery</li>
+            <li>Optional add-ons for extra deliverables</li>
+          </ul>
+
+          <p class="quicklink">
+            <a href="faq.html">Not sure what a “shot list” or “key guests” means? Check our FAQ.</a>
+          </p>
+
+          <section class="gallery-masonry">
             <figure class="service_example">
-              <img alt="Networking Event" src="../images/business_dinner.jpg" />
+              <img alt="Networking Event" src="../images/business_dinner.jpg" loading="lazy" decoding="async"/>
               <figcaption>Car Show</figcaption>
             </figure>
             <figure class="service_example">
-              <img alt="People watching a presentation" src="../images/tea.jpg" />
+              <img alt="People watching a presentation" src="../images/tea.jpg" loading="lazy" decoding="async"/>
               <figcaption>Chinese Show</figcaption>
             </figure>
             <figure class="service_example">
-              <img alt="Tables around a stage" src="../images/tea1.jpg" />
+              <img alt="Tables around a stage" src="../images/tea1.jpg" loading="lazy" decoding="async"/>
               <figcaption>Traditional Chinese Show</figcaption>
             </figure>
             <figure class="service_example">
-              <img alt="People gathered in town" src="../images/flower.jpg" />
+              <img alt="People gathered in town" src="../images/gala.jpg" loading="lazy" decoding="async"/>
               <figcaption>Flower Show</figcaption>
             </figure>
             <figure class="service_example">
-              <img alt="Master of Ceremonies" src="../images/mc.jpg" />
+              <img alt="Master of Ceremonies" src="../images/mc.jpg" loading="lazy" decoding="async" />
               <figcaption>Coffee Party</figcaption>
             </figure>
             <figure class="service_example">
-              <img alt="People surrounding woman giving speech" src="../images/birthday.jpg" />
+              <img alt="People surrounding woman giving speech" src="../images/birthday.jpg" loading="lazy" decoding="async" />
               <figcaption>Birthday Show</figcaption>
             </figure>
           </section>
