--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
 <head>
   <title>Home | Sweet House Studio </title>
   <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <script src="../scripts/site.js" defer></script>
   <link rel="stylesheet" type="text/css" href="../styles/site.css">
 </head>
 
@@ -23,21 +25,25 @@
     <div class="main-box">
       <main>
         <article>
-          <h1 class="welcome">Welcome!</h1>
+          <h1 class="welcome">Sweet House Studio</h1>
 
           <figure>
-            <img alt="Getting ready to take a photo" src="../images/taking-photos.jpg" />
+            <img alt="Getting ready to take a photo" src="../images/taking-photos.jpg" decoding="async"/>
           </figure>
 
           <h2 class="slogan">Let us capture your precious moments.</h2>
 
           <p>
-            Sweet House Studio is a portrait, event, and commercial photography studio based in Metuchen, NJ. We offer a wide range of services, including wedding, 
-            maternity, and graduation photography. Since 2016, Sweet House Studio has proudly specialized in family photography, helping clients capture timeless 
-            moments they will cherish for a lifetime. We invite you to explore our website and reach out with any questions or comments — we look forward to connecting 
-            with you and capturing your beautiful memories!
+            Warm, clean images with calm direction—so you look natural and feel comfortable.
+          </p>
 
-
+            <ul>
+              <li><a href="portraits.html">Portraits</a>: family, maternity, graduation, headshots</li>
+              <li><a href="events.html">Events</a>: performances, birthdays, community & corporate gatherings</li>
+              <li><a href="travelings.html">Weddings & travel sessions</a>: coverage beyond the studio</li>
+            </ul>
+          <p>
+            <a class="button" href="contact.html">Book a consultation</a>
           </p>
         </article>
       </main>
