--- a/faq.html
+++ b/faq.html
@@ -4,6 +4,8 @@
 <head>
   <title>FAQ | Sweet House Studio </title>
   <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <script src="../scripts/site.js" defer></script>
   <link rel="stylesheet" type="text/css" href="../styles/site.css">
 </head>
 
@@ -27,60 +29,49 @@
           <section class="faq">
             <h2>How can I get accurate pricing for my session?</h2>
             <p>
-              Because almost all sessions are unique and pricing is based on a case-by-case basis, we cannot give you an
-              accurate estimate unless we've met you for a consultation. Consultations are complimentary and
-              commitment-free.
+              We provide quotes after a quick consultation so coverage time, location, and deliverables match your needs.
             </p>
           </section>
+
           <section class="faq">
             <h2>What is a "shot list"?</h2>
             <p>
-              Although our photographers have extensive experience in how to make the bride and groom shine, we
-              understand that there are specific shots you may want us to take. But this is not restricted to weddings!
-              Often, event planners need specific shots to show their sponsors or to advertise for future events. A
-              "shot list" is a list of key people, locations, or situations that the client wishes to be captured. With
-              the "shot list," we can ensure our clients get the shots they want without fear of running out of time or
-              forgetting in the excitement of the day.
+              A short list of must-have people and moments. We’ll help you keep it simple and realistic.
             </p>
           </section>
+
           <section class="faq">
             <h2>What do you mean by "key guests"?</h2>
             <p>
-              We know it takes more than one person to plan and produce an event. We have found that many of our clients
-              often use our photos on their websites to advertise or show to their clients and sponsors. To ensure that
-              these key people are included and our clients are satisfied, we like to provide our clients the
-              opportunity to identify important guests to ensure their inclusion in the photos.
+              VIPs you want prioritized—family members, speakers, sponsors, or special attendees.
             </p>
           </section>
+
           <section class="faq">
             <h2>How does a consultation work?</h2>
             <p>
-              We want to meet the needs of our clients without breaking the bank, and the consultation enables us to
-              provide a personalized experience for each photo session where you get what you want at a price you can
-              afford. Once you send a request for a consultation using our <a href="contact.html">contact form</a>, we
-              will have a consultant call to schedule a 30-minute appointment to discuss your event. During the
-              consultation, you and the consultant will address your requirements and build a custom package—or choose
-              from our set packages—to get everything you want within your budget. The consultant will then pair you
-              with the photographer best fit for your style and availability.
+              We review your goals, timeline, location, and style, then recommend a package and send a clear quote.
             </p>
           </section>
+
           <section class="faq">
-            <h2>What is the benefit of an in-studio versus an on-location family portrait session?</h2>
+            <h2>In-studio vs on-location portraits—what’s the difference?</h2>
             <p>
-              The in-studio session allows for a private session with no distractions. We have all of our professional
-              equipment and you have full access to our backgrounds and props. On location, you have the ability to
-              capture nature and create beautiful settings a studio cannot artificially replicate. The better fit
-              depends on what you prefer.
+              Studio sessions are private with controlled lighting; on-location sessions feel more candid and environmental.
             </p>
           </section>
+
           <section class="faq">
             <h2>Do you allow walk-ins?</h2>
             <p>
-              If you are looking for a single portrait photo rather than a full photo session, such as for
-              identification on official documents, we accept walk-ins. To ensure high-quality work, we do not accept
-              walk-ins for sessions, as we require a short consultation to go over theme and cost.
+              Sessions are typically by appointment so we can plan the look and deliverables. Message us for availability.
             </p>
           </section>
+
+          <p>
+            <a class="button" href="contact.html">Ask a question</a>
+          </p>
+          
         </article>
       </main>
     </div>
