--- a/portraits.html
+++ b/portraits.html
@@ -4,6 +4,8 @@
 <head>
   <title>Portraits | Sweet House Studio </title>
   <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <script src="../scripts/site.js" defer></script>
   <link rel="stylesheet" type="text/css" href="../styles/site.css">
 </head>
 
@@ -55,53 +57,53 @@
             To inquire about availability, special requests, and/or a detailed estimate, please <a
               href="contact.html">request a consultation</a>.
           </p>
-          <section>
+          <section class="gallery-grid">
             <figure class="service_example">
-              <img alt="Parents with baby" src="../images/baby.jpg" />
+              <img alt="Parents with baby" src="../images/baby.jpg" loading="lazy" decoding="async"/>
               <figcaption>Baby</figcaption>
             </figure>
             <figure class="service_example">
-              <img alt="Family of four" src="../images/family-of-four.jpg" />
+              <img alt="Family of four" src="../images/family-of-four.jpg" loading="lazy" decoding="async"/>
               <figcaption>The Gao's family</figcaption>
             </figure>
             <figure class="service_example">
-              <img alt="Model" src="../images/model.jpg" />
+              <img alt="Model" src="../images/model.jpg" loading="lazy" decoding="async"/>
               <figcaption>Fiona</figcaption>
             </figure>
             <figure class="service_example">
-              <img alt="Parents with newborn" src="../images/newborn.jpg" />
+              <img alt="Parents with newborn" src="../images/newborn.jpg" loading="lazy" decoding="async"/>
               <figcaption>Newborn</figcaption>
             </figure>
             <figure class="service_example">
-              <img alt="Three Sisters" src="../images/portrait.jpg" />
+              <img alt="Three Sisters" src="../images/portrait.jpg" loading="lazy" decoding="async"/>
               <figcaption>Fiona</figcaption>
             </figure>
             <figure class="service_example">
-              <img alt="Father and two sons" src="../images/father-sons.jpg" />
+              <img alt="Father and two sons" src="../images/father-sons.jpg" loading="lazy" decoding="async"/>
               <figcaption>Father and son</figcaption>
             </figure>
             <figure class="service_example">
-              <img alt="Siblings hugging" src="../images/siblings2.jpg" />
+              <img alt="Siblings hugging" src="../images/siblings2.jpg" loading="lazy" decoding="async" />
               <figcaption>Little Ayden</figcaption>
             </figure>
             <figure class="service_example">
-              <img alt="Siblings" src="../images/siblings.jpg" />
+              <img alt="Siblings" src="../images/siblings.jpg" loading="lazy" decoding="async"/>
               <figcaption>Ayden</figcaption>
             </figure>
             <figure class="service_example">
-              <img alt="A young woman with a flower" src="../images/senior.jpg" />
+              <img alt="A young woman with a flower" src="../images/senior.jpg" loading="lazy" decoding="async"/>
               <figcaption>Fiona in Xiamen</figcaption>
             </figure>
             <figure class="service_example">
-              <img alt="Professional headshot of women" src="../images/headshot.jpg" />
+              <img alt="Professional headshot of women" src="../images/headshot.jpg" loading="lazy" decoding="async"/>
               <figcaption>A professional head shot</figcaption>
             </figure>
             <figure class="service_example">
-              <img alt="A father with newborn" src="../images/father.jpg" />
+              <img alt="A father with newborn" src="../images/father.jpg" loading="lazy" decoding="async"/>
               <figcaption>Dr. Gao</figcaption>
             </figure>
             <figure class="service_example">
-              <img alt="A father with Son" src="../images/father-son.jpg" />
+              <img alt="A father with Son" src="../images/father-son.jpg" loading="lazy" decoding="async"/>
               <figcaption>Mr. Gao and son</figcaption>
             </figure>
           </section>
