--- a/services.html
+++ b/services.html
@@ -4,6 +4,8 @@
 <head>
   <title>Services | Sweet House Studio </title>
   <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <script src="../scripts/site.js" defer></script>
   <link rel="stylesheet" type="text/css" href="../styles/site.css">
 </head>
 
@@ -24,80 +26,44 @@
     <div class="main-box">
       <main>
         <article>
-          <h1>Our Services</h1>
+          <h1>Services</h1>
           <p>
-            We like to think of ourselves as a special ops team for our clientele. Sweet House Studio aims to accommodate the
-            needs of all our clients. For special circumstances, availability, and/or additional information, please <a
-              href="contact.html">contact us</a> for a consultation.
+            Simple packages, clear deliverables, and a relaxed session experience—built for real life and real schedules.
           </p>
-          <h2>Event Sessions Include:</h2>
-          <section>
-            <ul>
-              <li>Traveling</li>
-              <li>Corporate Events</li>
-              <li>Galas</li>
-            </ul>
-            <p>
-              We've become quite renowned for our event photography, so much so that we needed to develop separate <a
-                href="events.html">event</a> and <a href="Travelings.html">traveling</a> packages. Session costs start at
-              $400, depending on the number of shots, overall session duration, and the number of subjects.
-            </p>
-            <p>
-              Our most basic package begins at 50 edited proofs; speak with a consultant to see how much it would cost
-              for your perfect session.
-            </p>
-            <p>
-              If the location is greater than 20 miles' distance from the studio, there is an additional cost for
-              travel.
-            </p>
-            <p><a href="Travelings.html">Looking to learn more about travelings?</a></p>
-            <p><a href="events.html">Looking to learn more about other events?</a></p>
-          </section>
-          <h2>On-Location Sessions Include:</h2>
-          <section>
-            <ul>
-              <li>Senior portraits</li>
-              <li>Family portraits</li>
-              <li>Maternity portraits</li>
-            </ul>
-            <p>
-              Session costs start st $350, depending on the number of shots, the number of locations, overall session
-              duration, and the number of subjects.
-            </p>
-            <p>
-              If the location is greater than 20 miles' distance from the studio, there is an additional cost for
-              travel.
-            </p>
-            <p>
-              Our most basic package begins at 25 edited proofs; speak with a consultant to see how much it would cost
-              for your perfect session.
-            </p>
-            <p>
-              Products can be purchased after the session, during the proof review.
-            </p>
-            <p><a href="portraits.html">Looking to learn more about portraits?</a></p>
-          </section>
-          <h2>In-Studio Sessions Include:</h2>
-          <section>
-            <ul>
-              <li>Professional head shots</li>
-              <li>Senior portraits</li>
-              <li>Family portraits</li>
-              <li>Newborn portraits</li>
-            </ul>
-            <p>
-              Session costs start at $200, depending on the number of shots, session duration, and the number of
-              subjects.
-            </p>
-            <p>
-              Our most basic package begins at 25 edited proofs; speak with a consultant to see how much it would cost
-              for your perfect session.
-            </p>
-            <p>
-              Additional products can be purchased during the session.
-            </p>
-            <p><a href="portraits.html">Looking to learn more about portraits?</a></p>
-          </section>
+
+          <h2>Event Coverage</h2>
+          <ul>
+            <li>Performances, birthdays, community & corporate events</li>
+            <li>Coverage + curated edited gallery</li>
+            <li>Optional shot list + VIP/key guest capture</li>
+          </ul>
+          <p>
+            Starting at $400. See examples on the <a href="events.html">Events</a> page.
+          </p>
+
+          <h2>Studio Portraits</h2>
+          <ul>
+            <li>Headshots, senior portraits, family, newborn</li>
+            <li>Controlled lighting + a comfortable private setting</li>
+            <li>Optional prints, albums, and wall art</li>
+          </ul>
+          <p>
+            Starting at $200. See examples on the <a href="portraits.html">Portraits</a> page.
+          </p>
+
+          <h2>Weddings & Travel</h2>
+          <ul>
+            <li>Wedding coverage and destination sessions</li>
+            <li>Timeline planning + simple shot list support</li>
+            <li>Curated edited gallery with optional add-ons</li>
+          </ul>
+          <p>
+            Starting at $300. View examples on the <a href="travelings.html">Weddings & Travel</a> page.
+          </p>
+
+          <p>
+            <a class="button" href="contact.html">Request a quote</a>
+          </p>              
         </article>
       </main>
     </div>
