--- a/about.html
+++ b/about.html
@@ -6,14 +6,14 @@
   <title>About | Sweet House Studio </title>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   
-  <script src="../scripts/site.js" defer></script>
-  <link rel="stylesheet" type="text/css" href="../styles/site.css">
+  <script src="scripts/site.js" defer></script>
+  <link rel="stylesheet" type="text/css" href="styles/site.css">
 </head>
 
 <body>
   <nav>
     <ul>
-      <li><a href="index.html"><img alt="Sweet House Studio Logo" src="../images/logo.png" /></a></li>
+      <li><a href="index.html"><img alt="Sweet House Studio Logo" src="images/logo.png" /></a></li>
       <li><a href="index.html">Home</a></li>
       <li><a href="services.html">Services</a></li>
       <li><a href="featured.html">Featured</a></li>
@@ -29,7 +29,7 @@
         <article>
           <h1>About Us</h1>
           <figure>
-            <img alt="Photography Studio" src="../images/studio.jpg" loading="lazy" decoding="async" />
+            <img alt="Photography Studio" src="images/studio.jpg" loading="lazy" decoding="async" />
             <figcaption>Sweet House Studio</figcaption>
           </figure>
           <p>
@@ -37,7 +37,7 @@
             moments of life.
           </p>
           <figure>
-            <img alt="Founder portrait" src="../images/woman.jpg" loading="lazy" decoding="async" />
+            <img alt="Founder portrait" src="images/woman.jpg" loading="lazy" decoding="async" />
             <figcaption>Fiona Chou, Founder</figcaption>
           </figure>
           <ul>
