--- a/index.html
+++ b/index.html
@@ -5,14 +5,14 @@
   <title>Home | Sweet House Studio </title>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <script src="../scripts/site.js" defer></script>
-  <link rel="stylesheet" type="text/css" href="../styles/site.css">
+  <script src="scripts/site.js" defer></script>
+  <link rel="stylesheet" type="text/css" href="styles/site.css">
 </head>
 
 <body>
   <nav>
     <ul>
-      <li><a href="index.html"><img alt="Sweet House Studio Logo" src="../images/logo.png" /></a></li>
+      <li><a href="index.html"><img alt="Sweet House Studio Logo" src="images/logo.png" /></a></li>
       <li class="current_page"><a href="index.html">Home</a></li>
       <li><a href="services.html">Services</a></li>
       <li><a href="featured.html">Featured</a></li>
@@ -28,7 +28,7 @@
           <h1 class="welcome">Sweet House Studio</h1>
 
           <figure>
-            <img alt="Getting ready to take a photo" src="../images/taking-photos.jpg" decoding="async"/>
+            <img alt="Getting ready to take a photo" src="images/taking-photos.jpg" decoding="async"/>
           </figure>
 
           <h2 class="slogan">Let us capture your precious moments.</h2>
