--- a/services.html
+++ b/services.html
@@ -5,14 +5,14 @@
   <title>Services | Sweet House Studio </title>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <script src="../scripts/site.js" defer></script>
-  <link rel="stylesheet" type="text/css" href="../styles/site.css">
+  <script src="scripts/site.js" defer></script>
+  <link rel="stylesheet" type="text/css" href="styles/site.css">
 </head>
 
 <body>
   <nav>
     <ul>
-      <li><a href="index.html"><img alt="Sweet House Studio Logo" src="../images/logo.png" /></a></li>
+      <li><a href="index.html"><img alt="Sweet House Studio Logo" src="images/logo.png" /></a></li>
       <li><a href="index.html">Home</a></li>
       <li class="current_page"><a href="services.html">Services</a></li>
       <li><a href="featured.html">Featured</a></li>
