--- a/travelings.html
+++ b/travelings.html
@@ -5,14 +5,14 @@
   <title>Weddings | Sweet House Studio </title>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <script src="../scripts/site.js" defer></script>
-  <link rel="stylesheet" type="text/css" href="../styles/site.css">
+  <script src="scripts/site.js" defer></script>
+  <link rel="stylesheet" type="text/css" href="styles/site.css">
 </head>
 
 <body>
   <nav>
     <ul>
-      <li><a href="index.html"><img alt="Sweet House Studio Logo" src="../images/logo.png" /></a></li>
+      <li><a href="index.html"><img alt="Sweet House Studio Logo" src="images/logo.png" /></a></li>
       <li><a href="index.html">Home</a></li>
       <li><a href="services.html">Services</a></li>
       <li><a href="featured.html">Featured</a></li>
@@ -71,51 +71,51 @@
           <p class="quicklink"><a href="faq.html">Not sure what a "shot list" is? Check out our FAQ page!</a></p>
           <section class="gallery-grid">
             <figure class="service_example">
-              <img alt="Groom kissing bride's hand" src="../images/couple-woods.jpg" loading="lazy" decoding="async" />
+              <img alt="Groom kissing bride's hand" src="images/couple-woods.jpg" loading="lazy" decoding="async" />
               <figcaption>New York City</figcaption>
             </figure>
             <figure class="service_example">
-              <img alt="Newlyweds posing in the woods" src="../images/couple-woods2.jpg" loading="lazy" decoding="async"  />
+              <img alt="Newlyweds posing in the woods" src="images/couple-woods2.jpg" loading="lazy" decoding="async"  />
               <figcaption>New York City2</figcaption>
             </figure>
             <figure class="service_example">
-              <img alt="Bride dancing" src="../images/dance.jpg" loading="lazy" decoding="async" />
+              <img alt="Bride dancing" src="images/dance.jpg" loading="lazy" decoding="async" />
               <figcaption>NJ Park</figcaption>
             </figure>
             <figure class="service_example">
-              <img alt="Newlyweds making hand hearts" src="../images/hand-heart.jpg" loading="lazy" decoding="async" />
+              <img alt="Newlyweds making hand hearts" src="images/hand-heart.jpg" loading="lazy" decoding="async" />
               <figcaption>Water Park</figcaption>
             </figure>
             <figure class="service_example">
-              <img alt="Flower girl walking" src="../images/flower-girl.jpg" loading="lazy" decoding="async" />
+              <img alt="Flower girl walking" src="images/flower-girl.jpg" loading="lazy" decoding="async" />
               <figcaption>Botanical Garden</figcaption>
             </figure>
             <figure class="service_example">
-              <img alt="Newlyweds walking" src="../images/walk.jpg" loading="lazy" decoding="async" />
+              <img alt="Newlyweds walking" src="images/walk.jpg" loading="lazy" decoding="async" />
               <figcaption>Xiamen</figcaption>
             </figure>
             <figure class="service_example">
-              <img alt="Cutting cake" src="../images/cut-cake.jpg" loading="lazy" decoding="async" />
+              <img alt="Cutting cake" src="images/cut-cake.jpg" loading="lazy" decoding="async" />
               <figcaption>NYC</figcaption>
             </figure>
             <figure class="service_example">
-              <img alt="Bouquet" src="../images/bouquet.jpg" loading="lazy" decoding="async" />
+              <img alt="Bouquet" src="images/bouquet.jpg" loading="lazy" decoding="async" />
               <figcaption>Flower</figcaption>
             </figure>
             <figure class="service_example">
-              <img alt="Newlyweds clinking glasses" src="../images/clink.jpg" loading="lazy" decoding="async" />
+              <img alt="Newlyweds clinking glasses" src="images/clink.jpg" loading="lazy" decoding="async" />
               <figcaption>NYC2</figcaption>
             </figure>
             <figure class="service_example">
-              <img alt="Newlyweds in front of church" src="../images/couple-church.jpg" loading="lazy" decoding="async" />
+              <img alt="Newlyweds in front of church" src="images/couple-church.jpg" loading="lazy" decoding="async" />
               <figcaption>NYC3</figcaption>
             </figure>
             <figure class="service_example">
-              <img alt="Just married sign" src="../images/just-married.jpg" loading="lazy" decoding="async" />
+              <img alt="Just married sign" src="images/just-married.jpg" loading="lazy" decoding="async" />
               <figcaption>NYC4</figcaption>
             </figure>
             <figure class="service_example">
-              <img alt="Groom and groomsmen jumping" src="../images/groomsmen.jpg" loading="lazy" decoding="async" />
+              <img alt="Groom and groomsmen jumping" src="images/groomsmen.jpg" loading="lazy" decoding="async" />
               <figcaption>NYC5</figcaption>
             </figure>
           </section>
