--- a/portraits.html
+++ b/portraits.html
@@ -5,14 +5,14 @@
   <title>Portraits | Sweet House Studio </title>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <script src="../scripts/site.js" defer></script>
-  <link rel="stylesheet" type="text/css" href="../styles/site.css">
+  <script src="scripts/site.js" defer></script>
+  <link rel="stylesheet" type="text/css" href="styles/site.css">
 </head>
 
 <body>
   <nav>
     <ul>
-      <li><a href="index.html"><img alt="Sweet House Studio Logo" src="../images/logo.png" /></a></li>
+      <li><a href="index.html"><img alt="Sweet House Studio Logo" src="images/logo.png" /></a></li>
       <li><a href="index.html">Home</a></li>
       <li><a href="services.html">Services</a></li>
       <li><a href="featured.html">Featured</a></li>
@@ -59,51 +59,51 @@
           </p>
           <section class="gallery-grid">
             <figure class="service_example">
-              <img alt="Parents with baby" src="../images/baby.jpg" loading="lazy" decoding="async"/>
+              <img alt="Parents with baby" src="images/baby.jpg" loading="lazy" decoding="async"/>
               <figcaption>Baby</figcaption>
             </figure>
             <figure class="service_example">
-              <img alt="Family of four" src="../images/family-of-four.jpg" loading="lazy" decoding="async"/>
+              <img alt="Family of four" src="images/family-of-four.jpg" loading="lazy" decoding="async"/>
               <figcaption>The Gao's family</figcaption>
             </figure>
             <figure class="service_example">
-              <img alt="Model" src="../images/model.jpg" loading="lazy" decoding="async"/>
+              <img alt="Model" src="images/model.jpg" loading="lazy" decoding="async"/>
               <figcaption>Fiona</figcaption>
             </figure>
             <figure class="service_example">
-              <img alt="Parents with newborn" src="../images/newborn.jpg" loading="lazy" decoding="async"/>
+              <img alt="Parents with newborn" src="images/newborn.jpg" loading="lazy" decoding="async"/>
               <figcaption>Newborn</figcaption>
             </figure>
             <figure class="service_example">
-              <img alt="Three Sisters" src="../images/portrait.jpg" loading="lazy" decoding="async"/>
+              <img alt="Three Sisters" src="images/portrait.jpg" loading="lazy" decoding="async"/>
               <figcaption>Fiona</figcaption>
             </figure>
             <figure class="service_example">
-              <img alt="Father and two sons" src="../images/father-sons.jpg" loading="lazy" decoding="async"/>
+              <img alt="Father and two sons" src="images/father-sons.jpg" loading="lazy" decoding="async"/>
               <figcaption>Father and son</figcaption>
             </figure>
             <figure class="service_example">
-              <img alt="Siblings hugging" src="../images/siblings2.jpg" loading="lazy" decoding="async" />
+              <img alt="Siblings hugging" src="images/siblings2.jpg" loading="lazy" decoding="async" />
               <figcaption>Little Ayden</figcaption>
             </figure>
             <figure class="service_example">
-              <img alt="Siblings" src="../images/siblings.jpg" loading="lazy" decoding="async"/>
+              <img alt="Siblings" src="images/siblings.jpg" loading="lazy" decoding="async"/>
               <figcaption>Ayden</figcaption>
             </figure>
             <figure class="service_example">
-              <img alt="A young woman with a flower" src="../images/senior.jpg" loading="lazy" decoding="async"/>
+              <img alt="A young woman with a flower" src="images/senior.jpg" loading="lazy" decoding="async"/>
               <figcaption>Fiona in Xiamen</figcaption>
             </figure>
             <figure class="service_example">
-              <img alt="Professional headshot of women" src="../images/headshot.jpg" loading="lazy" decoding="async"/>
+              <img alt="Professional headshot of women" src="images/headshot.jpg" loading="lazy" decoding="async"/>
               <figcaption>A professional head shot</figcaption>
             </figure>
             <figure class="service_example">
-              <img alt="A father with newborn" src="../images/father.jpg" loading="lazy" decoding="async"/>
+              <img alt="A father with newborn" src="images/father.jpg" loading="lazy" decoding="async"/>
               <figcaption>Dr. Gao</figcaption>
             </figure>
             <figure class="service_example">
-              <img alt="A father with Son" src="../images/father-son.jpg" loading="lazy" decoding="async"/>
+              <img alt="A father with Son" src="images/father-son.jpg" loading="lazy" decoding="async"/>
               <figcaption>Mr. Gao and son</figcaption>
             </figure>
           </section>
